179: Make git-pr flags configurable
Reviewed-by: rwestberg